--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
+    <!-- Game -->
+    <string name="key_region">Region</string>
+    <string name="key_name">Name</string>
+    <string name="key_description">Description</string>
+    <string name="key_minteams">Min Teams</string>
+    <string name="button_image">Add image</string>
+
     <!-- Tournament -->
     <string name="app_name">MAD_app</string>
     <string name="tournament_name">Tournament Name</string>
@@ -6,14 +13,6 @@
     <string name="max_teams">Max</string>
     <string name="tournament_date">Date</string>
     <string name="tournament_time">Time</string>
-
-    <!-- Game -->
-    <string name="key_region">Region</string>
-    <string name="key_name">Name</string>
-    <string name="key_description">Description</string>
-    <string name="key_minteams">Min Teams</string>
-
-    <string name="button_image">Add image</string>
     <string name="tournament_edit">Edit</string>
     <string name="tournament_participants">Participants</string>
     <string name="tournament_edit_tournament">Edit Tournament</string>
@@ -21,4 +20,7 @@
     <string name="btn_browse">Browse</string>
     <string name="game_name_cod_mw">COD : MW</string>
     <string name="tournament_name_32">Team Death Match 5V5 #32</string>
+
+    <!-- Team -->
+    <string name="team_name">Team Name</string>
 </resources>
