--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,9 @@
     <string name="btn_browse">Browse</string>
     <string name="game_name_cod_mw">COD : MW</string>
     <string name="tournament_name_32">Team Death Match 5V5 #32</string>
+    <string name="team_name">Team Name</string>
+    <string name="round1">Round 1</string>
+    <string name="matches">Matches</string>
+    <string name="vs">VS</string>
+    <string name="matchcreate">Create Match</string>
 </resources>
