--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,7 @@
     <string name="num_of_teams_5">Num of Teams : 5</string>
     <string name="min_4">Min : 4</string>
     <string name="max_16">Max : 16</string>
-    <string name="joined_teams">Joinded Teams :</string>
+    <string name="joined_teams">Joined Teams :</string>
 
     <string name="leader_user_name">Leader User Name</string>
 
