match_player_list integration, match_org_create integration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
 
     <!-- Team -->
     <string name="team_name">Team Name</string>
+    <string name="Tmatchdetails">Match Details</string>
+    <string name="match_winner">Winner :</string>
 </resources>
