--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,4 +135,6 @@
     <string name="top_10">Top 10</string>
     <string name="ongoing">Ongoin</string>
     <string name="upcomming">Upcomming</string>
+    <string name="select_team">"Select the Team : "</string>
+    <string name="join_now">Join Now</string>
 </resources>
