--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,4 +137,5 @@
     <string name="upcomming">Upcomming</string>
     <string name="select_team">"Select the Team : "</string>
     <string name="join_now">Join Now</string>
+    <string name="brackets">Brackets</string>
 </resources>
