strings.xml match values and match nav bars added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,7 +139,6 @@
     <string name="join_now">Join Now</string>
     <string name="brackets">Brackets</string>
     <string name="create_team">Create Team</string>
-    <string name="team_name">Team Name</string>
     <string name="team_descrption">Team Description</string>
     <string name="team_logo">Team Logo</string>
     <string name="teams">Teams</string>
@@ -155,4 +154,32 @@
     <string name="invite">Invite</string>
     <string name="team_players">Team Players:</string>
     <string name="remove">Remove</string>
+    <string name="updatematch">Update Match</string>
+    <string name="legends">Legends</string>
+    <string name="blazing">Blazing</string>
+    <string name="blazing_dragons">Blazing Dragons</string>
+    <string name="watched_dragons">Watched Dragons</string>
+    <string name="twin_dragons">Twin Dragons</string>
+    <string name="dynamic_dragon">Dynamic Dragon</string>
+    <string name="balling_dragons">Balling Dragons</string>
+    <string name="flame_dragon">Flame Dragon</string>
+    <string name="legendary_arthur">Legendary Arthur</string>
+    <string name="legendary_merlin">Legendary Merlin</string>
+    <string name="legendary_natsu">Legendary Natsu</string>
+    <string name="legendary_luffy">Legendaty Luffy</string>
+    <string name="legendary_simpsons">Legendary Simpsons</string>
+    <string name="round">Round :</string>
+    <string name="brackets_ws">Brackets :</string>
+    <string name="teama">Team A :</string>
+    <string name="teamb">Team B :</string>
+    <string name="start_d_t">Starts Date and Time :</string>
+    <string name="add_a_new_match">Add a New Match</string>
+    <string name="swordy">Swordy</string>
+    <string name="riders">Riders</string>
+    <string name="platles">Platlets</string>
+    <string name="doggies">Doggies</string>
+    <string name="team_a_scores">Team A Scores</string>
+    <string name="team_b_scores">Team B Scores</string>
+    <string name="apexes">Apexes</string>
+    <string name="knights">Knights</string>
 </resources>
