--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,4 +172,7 @@
     <string name="team_b_scores">Team B Scores</string>
     <string name="apexes">Apexes</string>
     <string name="knights">Knights</string>
+    <string name="email">Email</string>
+    <string name="full_name">Full Name</string>
+    <string name="user_name">User Name</string>
 </resources>
