--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -175,4 +175,13 @@
     <string name="email">Email</string>
     <string name="full_name">Full Name</string>
     <string name="user_name">User Name</string>
+
+    <string-array name="gamelist">
+        <item>Select the Game</item>
+        <item>COD : MW</item>
+        <item>Valorant</item>
+        <item>Leage of Legends</item>
+        <item>Rainbow 6</item>
+
+    </string-array>
 </resources>
