--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -184,4 +184,13 @@
         <item>Rainbow 6</item>
 
     </string-array>
+
+    <string-array name="teamlist">
+        <item>Select the team</item>
+        <item>Team Alpha</item>
+        <item>Colas</item>
+        <item>Smokes</item>
+        <item>6s</item>
+
+    </string-array>
 </resources>
